--- a/desafios/modulo02/d010/site-android.html
+++ b/desafios/modulo02/d010/site-android.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/imgs/favicon.ico" type="image/x-icon">
     <title>Como surgiu o mascote do Android</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
@@ -36,8 +36,8 @@
             </p>
 
             <picture>
-            <source media="(max-width: 700px)" srcset="imagens/dan-droids-pq.png">
-            <img src="imagens/dan-droids.png">  
+            <source media="(max-width: 700px)" srcset="assets/imgs/dan-droids-pq.png">
+            <img src="assets/imgs/dan-droids.png">  
             </picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.
@@ -50,14 +50,14 @@
             </p>
 
             <picture>
-            <source media="(max-width: 700px)" srcset="imagens/irina-blok-pq.jpg">
-            <img src="imagens/irina-blok.jpg">
+            <source media="(max-width: 700px)" srcset="assets/imgs/irina-blok-pq.jpg">
+            <img src="assets/imgs/irina-blok.jpg">
             </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
             </p>
 
-            <img class="pequena" src="imagens/bugdroid.png">
+            <img class="pequena" src="assets/imgs/bugdroid.png">
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
             </p>
