--- a/desafios/modulo03/d012/cordel.html
+++ b/desafios/modulo03/d012/cordel.html
@@ -28,7 +28,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -62,7 +62,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -98,7 +98,7 @@
 
     <footer>
         <p>
-            Site criado por <a href="https://github.com/Felippe-Figueiredo" target="_blank">Felipe Figueiredo</a>
+            Site criado por <a href="https://github.com/Felippe-Figueiredo" target="_blank">Felipe Figueiredo</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>
         </p>
     </footer>
 </body>
