--- a/exercicios/modulo03/ex023/tabela002.html
+++ b/exercicios/modulo03/ex023/tabela002.html
@@ -74,9 +74,9 @@
             </tr>
         </thead>
         <tfoot>
-            <tr>                
-                <td></td>
-                <th scope="row">Total de Habitantes</th> <!-- SCOPE = ROW (os dados estao na linha)-->
+            <tr>   
+                <th scope="row" colspan="2">Total de Habitantes</th> 
+                <!-- SCOPE = ROW (os dados estao na linha)-->
                 <td class="num"><strong>212 583 750</strong></td>
             </tr>
         </tfoot>
