--- a/exercicios/modulo03/ex023/tabela006.html
+++ b/exercicios/modulo03/ex023/tabela006.html
@@ -40,7 +40,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eligendi perferendis deserunt dignissimos cum cumque sapiente voluptatum quam illum ad quos dolorum atque deleniti iusto saepe ea, aliquid rem reprehenderit.</p>
     <div id="container">
         <table>
-            <caption>Tabelas Responsivas</caption>
+            <caption>Vendas de produtos por mês</caption>
             <theader>
                 <tr>
                     <th>Produto</th>
