--- a/exercicios/modulo04/ex024/iframe003.html
+++ b/exercicios/modulo04/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi ex odio incidunt possimus hic tempore. Provident aliquam modi consequuntur amet sunt hic sapiente, nam ut, repellat, officiis fugiat velit. Reiciendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quidem quis atque voluptas libero, commodi quibusdam nemo facilis adipisci, excepturi ullam officiis consequatur id veritatis ratione, nisi ex recusandae. Blanditiis.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, voluptatibus dolor tenetur ex asperiores eligendi eos, animi, quas praesentium iusto aspernatur. Unde quos officiis porro officia autem molestiae quidem excepturi!</p>">
         <p>Infelizmente seu navegador nao é compativel com isso.</p>
     </iframe>
 
