--- a/exercicios/modulo04/ex026/mq002/index.html
+++ b/exercicios/modulo04/ex026/mq002/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meddia Query</title>
+    <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="css/retrato.css" media="screen and (orientation: portrait)">
+    <!-- MEDIA TYPE E MEDIA FEATURE -->
+    <link rel="stylesheet" href="css/paisagem.css" media="screen and (orientation: landscape)">
 </head>
 <body>
     <h1>Mude a orientação do seu dispositivo</h1>
